source/assets/stylesheets/app/_footer.sass
.o-app__footer
  position: fixed
  display: flex
  flex-direction: column
  left: 0
  right: 0
  bottom: 0
  height: $footer-height
  background-color: #111
  color: white
  text-align: center
  z-index: -2

.c-author
  display: flex
  justify-content: center
  align-items: center
  flex: 1
  font-weight: 600
  font-size: 4rem
  color: white
  text-decoration: none

  &:hover,
  &:active
    text-decoration: underline

